<resources>
    <string name="app_name">Clear Vision Helsinki</string>
    <string name="title">Title:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_current">Current</string>
    <string name="category_schedule">Schedule</string>
    <string name="txt_end_date">11/12/2018</string>
    <string name="txt_title_end_date">End Date:</string>
    <string name="txt_start_date">11/11/2018</string>
    <string name="txt_title_start_date">Start Date:</string>
    <string name="txt_desc">there is build any bridge</string>
    <string name="txt_title_desc">Description:</string>
    <string name="txt_address">Puumiehenkuja 5, 02150 Espoo</string>
    <string name="txt_title_address">Address:</string>
    <string name="txt_title">Bridge Reconstruct</string>

    <string name="category_overview"></string>
</resources>
