<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <TextView
            android:id="@+id/title_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title" />
        <TextView
            android:id="@+id/address_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_address" />
        <TextView
            android:id="@+id/description_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc" />

        <TextView
            android:id="@+id/startData_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_date" />
        <TextView
            android:id="@+id/endData_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_end_date" />
</LinearLayout>
